--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ main > section {
 
 main > section > h1, 
 main > section > p, 
+main > section > a, 
 main > section > small {
     text-align: center;
     text-shadow: 1px 1px 1px #eee;
@@ -39,10 +40,16 @@ main > section > h1 {
     text-transform: uppercase;
 }
 
-main > section > p {
+main > section > p,
+main > section > a {
     font-size: 14px;
     max-width: 700px;
     line-height: 1.6;
+}
+
+main > section > a {
+    color: #0357a1;
+    text-decoration: underline;
 }
 
 main > section > small {
