--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,17 @@ main > section > a {
 }
 
 main > section > a {
-    color: #0357a1;
-    text-decoration: underline;
+    width: fit-content;
+    padding: 10px 15px;
+    border-radius: 10px;
+    color: #fff;
+    text-shadow: none;
+    background-color: #000;
+    box-shadow: 1px 1px 1px #eee;
+}
+
+main > section > a:hover {
+    scale: 1.05;
 }
 
 main > section > small {
