--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,67 @@ main > section {
     padding: 50px;
 }
 
+main > section > div.avatar {
+    position: relative; 
+    width: 130px;
+    height: 130px;
+    margin-bottom: 15px;
+    border-radius: 50%;
+    overflow: visible;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+main > section > div.avatar > img {
+    position: relative; 
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    image-rendering: optimizeQuality;
+    border-radius: 50%;
+}
+
+main > section > div.avatar::before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    width: calc(100% + 10px); 
+    height: calc(100% + 10px);
+    border-radius: 50%;
+    background: conic-gradient(
+        #000 0%,
+        #fff 30%,
+        #111 60%, 
+        #111 100%
+    );
+    animation: rotate-avatar 3s linear infinite;
+    z-index: 1; 
+}
+
+main > section > div.avatar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border-radius: 50%;
+    z-index: 2;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px inset;
+}
+
+main > section > div.avatar > img {
+    z-index: 3;
+}
+
+@keyframes rotate-avatar {
+    to { transform: rotate(360deg); }
+}
+
 main > section > h1, 
 main > section > p, 
 main > section > a, 
