--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@ main > section > div.avatar {
     overflow: visible;
 }
 
+main > section > div.avatar:hover {
+    scale: 1.1;
+}
+
 main > section > div.avatar > img {
     position: relative; 
     z-index: 2;
