--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ main > section > div.avatar > img {
     height: 100%;
     object-fit: cover;
     image-rendering: optimizeQuality;
+    filter: grayscale(100%);
     border-radius: 50%;
 }
 
