--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ main > section > a {
 }
 
 main > section > a {
+    z-index: 8;
     width: fit-content;
     padding: 10px 15px;
     border-radius: 10px;
