--- a/css/main.css
+++ b/css/main.css
@@ -53,12 +53,15 @@ main > section > div.avatar::before {
     bottom: -5px;
     width: calc(100% + 10px); 
     height: calc(100% + 10px);
-    border-radius: 50%;
+    
+    /* VALOR INICIAL DO BORDA-RADIUS PARA O EFEITO */
+    border-radius: 40% 60% 70% 30% / 50% 60% 30% 70%;
+    
     background: conic-gradient(
         #000 0%,
-        #fff 30%,
-        #111 60%, 
-        #111 100%
+        #999 30%,
+        #444 60%, 
+        #000 100%
     );
     animation: rotate-avatar 3s linear infinite;
     z-index: 1;
@@ -83,7 +86,19 @@ main > section > div.avatar > img {
 }
 
 @keyframes rotate-avatar {
-    to { transform: rotate(360deg); }
+    0% { 
+        transform: rotate(0deg); 
+        border-radius: 40% 60% 70% 30% / 50% 60% 30% 70%; 
+    }
+    50% { 
+        transform: rotate(180deg); 
+        border-radius: 60% 40% 30% 70% / 70% 30% 60% 40%; 
+        scale: 1.1;
+    }
+    100% { 
+        transform: rotate(360deg); 
+        border-radius: 40% 60% 70% 30% / 50% 60% 30% 70%; 
+    }
 }
 
 main > section > h1, 
