--- a/css/wallpaper.css
+++ b/css/wallpaper.css
@@ -9,4 +9,11 @@
     background-image: url('../images/wallpaper.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    animation: zoom-in-out 10s infinite alternate;
+}
+
+@keyframes zoom-in-out {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.4); }
+    100% { transform: scale(1); }
 }
