--- a/css/dania.css
+++ b/css/dania.css
@@ -9,7 +9,7 @@
     width: 250px;
     padding: 15px;
     overflow: hidden;
-    border-radius: 15px 15px 15px 0;
+    border-radius: 0 15px 15px 15px;
     background-color: #111;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: right 0.3s ease-in-out;
@@ -21,7 +21,7 @@
 
 .dania > button.dania-toggle {
     position: fixed;
-    bottom: 15px;
+    bottom: 291px;
     right: 0px;
     z-index: 8;
     padding: 10px 10px 10px 15px;
