--- a/css/dania.css
+++ b/css/dania.css
@@ -1,6 +1,8 @@
+/* 1. CONTAINER PRINCIPAL - .dania */
 .dania {
     position: fixed;
-    bottom: 15px;
+    /* MUDANÇA: Move para 15px do topo */
+    top: 15px; 
     right: -250px;
     z-index: 9;
     display: flex;
@@ -9,7 +11,7 @@
     width: 250px;
     padding: 15px;
     overflow: hidden;
-    border-radius: 0 15px 15px 15px;
+    border-radius: 0 15px 15px 15px; 
     background-color: #111;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: right 0.3s ease-in-out;
@@ -21,7 +23,7 @@
 
 .dania > button.dania-toggle {
     position: fixed;
-    bottom: 291px;
+    top: 15px; 
     right: 0px;
     z-index: 8;
     padding: 10px 10px 10px 15px;
