--- a/css/dania.css
+++ b/css/dania.css
@@ -59,7 +59,7 @@
     border-radius: 10px;
     border: 1px solid #222;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 1.5;
     color: #fff;
     cursor: default;
     background-color: #222;
