--- a/css/dania.css
+++ b/css/dania.css
@@ -5,7 +5,7 @@
     top: 15px; 
     right: -250px;
     z-index: 9;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 10px;
     width: 250px;
